# ripple

./: .gitignore  Dockerfile  README.md  SUBMISSION.md  install.sh  run_demo.sh  start.sh
apps/api/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
apps/api/agent/: __init__.py  agent_loop.py  compression.py  hooks.py  memory_system.py  state.py  subagent.py
apps/api/agent/skills/: __init__.py  loader.py
apps/api/agent/skills/ai-detection-bypass/: SKILL.md
apps/api/agent/skills/copyright-asset-library/: SKILL.md
apps/api/agents/: __init__.py  fact_checker_agent.py  forum_debate_agent.py  insight_analyst_agent.py  material_curator_agent.py  oracle_agent.py  orchestrator.py  risk_reviewer_agent.py  script_writer_agent.py  sim_predictor_agent.py  style_decoder_agent.py  topic_strategist_agent.py  trend_scout_agent.py  visual_producer_agent.py
apps/api/kernel/: __init__.py  event_bus.py  orchestration.py  types.py
apps/api/kernel/action/: __init__.py  registry.py
apps/api/kernel/cognition/: __init__.py  llm.py
apps/api/kernel/decision/: __init__.py
apps/api/kernel/distribution/: __init__.py  api_v2.py
apps/api/kernel/persistence/: __init__.py  crypto_fallback.py  db.py
apps/api/kernel/reasoning/: __init__.py
apps/api/kernel/sensing/: __init__.py  oracle.py
apps/api/kernel/skills/: __init__.py  loader.py
apps/api/tests/: __init__.py  test_e2e_pipeline.py  test_e2e_v2.py  test_oracle_real.py  test_real_minimax.py  test_smoke.py
apps/api/utils/: __init__.py  config.py  crypto.py  llm_router.py
deploy/: deploy_ripple.sh  (+2 more)
(+94 files in other folders)
